
[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-3.x]]
=== Ruby Agent version 3.x

[float]
[[unreleased]]
==== Unreleased

[float]
===== Added

- Add `span.context.destination` fields {pull}647[#647]
- Add more precise (experimental) SQL summarizer {pull}640[#640]
- Add support for Shoryuken (AWS SQS) {pull}674[#674]
- Add support for Sneakers (Experimental) {pull}676[#676]

[float]
===== Changed

- Allow action dispatch spy to be disabled via `disabled_instrumentations` {pull}657[#657]

[float]
===== Fixed

- Fix Rails Console detection when top-level `Console` constant defined {pull}664[#664]
- Fix a few Ruby 2.7 related deprecation warnings {pull}667[#667]
- Fix response header values not being converted to strings {pull}675[#675]

[[release-notes-3.3.0]]
==== 3.3.0 (2019-12-05)

[float]
===== Added

- Add option `disable_metrics` {pull}625[#625]

[float]
===== Fixed

- Make Filters thread-safe {pull}624[#624]
- Omit passwords in outgoing urls {pull}629[#629]
- Add missing mutex to Counter metrics {pull}636[#636]
- Correct span context collection name for Mongo getMore commands {pull}637[#637]

[[release-notes-3.2.0]]
==== 3.2.0 (2019-11-19)

[float]
===== Added

- Add Grape support. {pull}562[#562]
- Add Breakdown Metrics {pull}526[#526]

[float]
===== Changes

- Set remote_addr to immediate socket {pull}615[#615]

[float]
===== Fixed

- Fixed pulling config from Kibana {pull}594[#594]
- Fixed a bug where the agent would alter the original cookies hash {pull}616[#616]

[[release-notes-3.1.0]]
==== 3.1.0 (2019-10-21)

[float]
===== Added

- Add `ElasticAPM::Sinatra.start` API. {pull}556[#566]

[float]
===== Changes

- Log 404s from CentralConfig on debug level {pull}553[#553]

[float]
===== Fixed

- Fix Central Config url path {pull}578[#578]

[[release-notes-3.0.0]]
==== 3.0.0 (2019-10-08)

[float]
===== Breaking Changes

The following changes are breaking, as they may change the way data is grouped or shown in Kibana or how your app