@@ -83,6 +83,23 @@ module ElasticAPM
         end
       end
 
+      describe 'api key' do
+        let(:config) do
+          Config.new(api_key: 'a_base64_encoded_string')
+        end
+
+        it 'adds an Authorization header if api key provided' do
+          stub = build_stub(
+            headers: {
+              'Authorization' => 'ApiKey a_base64_encoded_string'
+            }
+          )
+          subject.write('{}')
+          subject.flush
+          expect(stub).to have_been_requested
+        end
+      end
+
       context 'max request time' do
         let(:config) { Config.new(api_request_time: '100ms') }
 
